--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "Note_API",
+  "name": "Loan_Money_API",
   "version": "1.0.0",
-  "description": "Techathon node backend training.",
+  "description": "Techathon node backend training final project.",
   "main": "app.js",
   "repository": "https://github.com/PhilipOyelegbin/techathonprojects.git",
   "author": "Philip Oyelegbin <philipoyelegbin@gmail.com>",
   "license": "ISC",
   "private": true,
+  "type": "module",
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js"
@@ -14,7 +15,9 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cuid": "^3.0.0",
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.4.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
